--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "babel-preset-env": "^1.4.0"
   },
   "babel": {
-	  "presets": [
-	    ["env", {
-	      "targets": {
-	        "browsers": ["last 2 versions", "safari >= 7"]
-	      }
-	    }]
-	  ]
+    "comments": false,
+    "presets": [
+      ["env", {
+        "targets": {
+          "browsers": ["last 2 versions", "safari >= 7"]
+        }
+      }]
+    ]
   },
   "scripts": {
-  	"build": "babel dev/mybb-music.js --out-file mybb-music.js"
+    "build": "babel dev/mybb-music.js --out-file production/mybb-music.js"
   }
 }
