--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     ]
   },
   "scripts": {
-    "build": "babel dev/mybb-music.js --out-file production/mybb-music.js"
+    "build": "babel dev/mybb-music.js --out-file docs/mybb-music.js"
   }
 }
