--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "mybb-music",
   "version": "1.0.0",
+  "private": true,
   "devDependencies": {
+    "react-scripts": "1.0.7",
     "babel-cli": "^6.0.0"
   },
   "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "babel-preset-env": "^1.4.0"
   },
   "babel": {
@@ -18,6 +22,10 @@
     ]
   },
   "scripts": {
-    "build": "babel dev/mybb-music.js --out-file docs/mybb-music.js"
+    "run": "babel dev/mybb-music.js --out-file docs/mybb-music.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
